syntax = "proto3";

package xmaslist;

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string cookie = 2;
}

message LogoutRequest {
  string cookie = 1;
}

message LogoutResponse {}

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}
